<resources>
    <string name="app_name">Calculadora</string>
    <!-- Strings used for fragments for navigation -->
    <string name="text_cero_button">0</string>
    <string name="text_igual_button">=</string>
    <string name="text_punto_button">.</string>
    <string name="text_uno_button">1</string>
    <string name="text_dos_button">2</string>
    <string name="text_tres_button">3</string>
    <string name="text_cuatro_button">4</string>
    <string name="text_cinco_button">5</string>
    <string name="text_seis_button">6</string>
    <string name="text_siete_button">7</string>
    <string name="text_ocho_button">8</string>
    <string name="text_nueve_button">9</string>
    <string name="text_por_button">*</string>
    <string name="text_prociento_button">%</string>
    <string name="text_AC_button">AC</string>
    <string name="text_entre_button">/</string>
    <string name="text_masomenos_button">-/+</string>
    <string name="text_mas_button">+</string>
    <string name="text_menos_button">-</string>
    <string name="text_multi_button">*</string>
    <string name="text_salida_textView">0</string> // cambio
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="8dp"

</resources>